--- a/css/style.scss
+++ b/css/style.scss
@@ -3,289 +3,502 @@
 * {
   @include reset;
 }
-// body {
-//   background-color: beige;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap");
+@import "../css/mixinsandfunctions.scss";
+// * {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
 // }
+// /* http://meyerweb.com/eric/tools/css/reset/
+//    v2.0 | 20110126
+//    License: none (public domain)
+// */
 
-// body {
-//   display: grid;
-//   grid-template-areas:
-//     " header "
-//     /* ". heading ." */
-//     " main "
-//     " footer ";
-
-//   font-family: "Times New Roman", Times, serif;
-//   row-gap: 20px;
-//   grid-template-rows: 10rem auto 2rem;
-//   grid-template-columns: auto;
-//   height: 100vh;
-//   // background-color: red;
-//   @include media(tablet) {
-//     grid-template-columns: auto 1240px auto;
-//     grid-template-areas:
-//       ". header ."
-//       /* ". heading ." */
-//       ". main ."
-//       ". footer .";
-//   }
-// }
-// header {
-//   grid-area: header;
-//   border: 2px solid black;
-//   @include media(tablet) {
-//     // grid-template-columns: auto 1240px auto;
-//     display: grid;
-//     grid-template-rows: 5rem 5rem;
-//     grid-template-areas:
-//       // ". logo ."
-//       // /* ". heading ." */
-//       // ". nav .";
-
-//       " . "
-//       /* ". heading ." */
-//       " nav ";
-//     // align-items: end;
-//   }
-// }
-// main {
-//   grid-area: main;
-// }
-
-// footer {
-//   grid-area: footer;
-// }
-
-// nav {
-//   grid-area: nav;
-//   // height: 9rem;
-// }
-
-/* Add a black background color to the top navigation */
-.topnav {
-  // background-color: #333;
-  overflow: hidden;
-  display: flex;
-  justify-content: space-between;
-  // background-color: #0069B6;
-  /* background-color: #0069B6; */
-  // background-color: #2D2F8C;
-  background-color: #0058a9;
-  margin-bottom: 20px;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Add an active class to highlight the current page */
-.active {
-  background-color: #04aa6d;
-  color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-  display: none;
-}
-
-/* Dropdown container - needed to position the dropdown content */
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
-/* Style the dropdown button to fit inside the topnav */
-.dropdown .dropbtn {
-  font-size: 17px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
-
-/* Style the dropdown content (hidden by default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-/* Style the links inside the dropdown */
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-/* Add a dark background on topnav links and the dropdown button on hover */
-.topnav a:hover,
-.dropdown:hover .dropbtn {
-  background-color: #555;
-  color: white;
-}
-
-/* Add a grey background to dropdown links on hover */
-.dropdown-content2 a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Show the dropdown menu when the user moves the mouse over the dropdown button */
-.dropdown2:hover .dropdown-content2 {
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
-
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child),
-  .dropdown .dropbtn {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+body {
+  // font-family: "Poppins", sans-serif;
+  font-family: "garamond", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  // height: 100vh;
+}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-weight: 700;
+  // font-family: "Poppins", sans-serif;
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-    display: block;
-    height: 100vh;
+// style du menu
 
-    // min-height:100vh;
+nav {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  // width: 100vw;
+  // overflow: hidden;
+  margin: 0;
+  padding: 0;
+
+  // background: #242526;
+  background: #4054b2;
+  background-size: 100% 100%;
+  width: 100%;
+  border-radius: 0px 0px 10px 10px;
+  @media only screen and (min-width: 415px) {
+    // position: relative;
+    // width: 1240px;
+    // width: 100%;
+
+    background-image: linear-gradient(
+      85deg,
+      #352361 1%,
+      rgba(64, 84, 178, 1) 55%
+    );
   }
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .topnav.responsive .dropdown {
-    float: none;
-  }
-  .topnav.responsive .dropdown-content {
-    position: relative;
-  }
-  .topnav.responsive .dropdown .dropbtn {
-    display: block;
-    width: 100%;
-    text-align: left;
+  -webkit-background-clip: border-box;
+  @include media(desktop) {
+    // position: relative;
+    width: 1240px;
+    background-image: linear-gradient(
+      85deg,
+      #352361 1%,
+      rgba(64, 84, 178, 1) 55%
+    );
   }
 }
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: #3498db;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover,
-.dropbtn:focus {
-  background-color: #2980b9;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
+nav .wrapper {
   position: relative;
-  display: inline-block;
+  max-width: 1300px;
+  padding: 0px 30px;
+  height: 70px;
+  line-height: 70px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0; //essai
 }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {
-  display: block;
-}
-
-.topnav .dropbtn {
-  // float: left;
-  display: block;
-  // display: none;
+.wrapper .logo a {
   color: #f2f2f2;
-  text-align: center;
-  // padding: 14px 16px;
+  font-size: 30px;
+  font-weight: 600;
   text-decoration: none;
-  font-size: 17px;
 }
-
-@media screen and (max-width: 600px) {
-  .topnav .dropbtn {
-    display: block;
-    // display: none;
-    float: none;
+.wrapper .nav-links {
+  display: inline-flex;
+}
+.nav-links li {
+  list-style: none;
+}
+.nav-links li a {
+  color: #f2f2f2;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 9px 15px;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.nav-links li a:hover {
+  // background: #3a3b3c;
+  @include media(desktop) {
+    border-bottom: 5px solid black;
   }
 }
-
-// .topnav .dropbtn {
-//   // color: red;
-//   display: none;
-// }
-
-.topnav.responsive .dropbtn {
+.nav-links .mobile-item {
+  display: none;
+}
+.nav-links .drop-menu {
+  position: absolute;
+  // background: #242526;
+  background: #4054b2;
+  width: 180px;
+  line-height: 45px;
+  top: 85px;
+  opacity: 0;
+  visibility: hidden;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+.nav-links li:hover .drop-menu,
+.nav-links li:hover .mega-box {
+  transition: all 0.3s ease;
+  top: 70px;
+  opacity: 1;
+  visibility: visible;
+}
+.drop-menu li a {
+  width: 100%;
+  display: block;
+  padding: 0 0 0 15px;
+  font-weight: 400;
+  border-radius: 0px;
+}
+.mega-box {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding: 0 30px;
+  top: 85px;
+  opacity: 0;
+  visibility: hidden;
+}
+.mega-box .content {
+  background: #242526;
+  padding: 25px 20px;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+.mega-box .content .row {
+  width: calc(25% - 30px);
+  line-height: 45px;
+}
+.content .row img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.content .row header {
+  color: #f2f2f2;
+  font-size: 20px;
+  font-weight: 500;
+}
+.content .row .mega-links {
+  margin-left: -40px;
+  border-left: 1px solid rgba(255, 255, 255, 0.09);
+}
+.row .mega-links li {
+  padding: 0 20px;
+}
+.row .mega-links li a {
+  padding: 0px;
+  padding: 0 20px;
+  color: #d9d9d9;
+  font-size: 17px;
   display: block;
 }
+.row .mega-links li a:hover {
+  color: #f2f2f2;
+}
+.wrapper .btn {
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  display: none;
+}
+.wrapper .btn.close-btn {
+  position: absolute;
+  right: 30px;
+  top: 10px;
+}
 
-@media screen and (max-width: 600px) {
-  // .topnav a:not(:first-child),
-  // .dropdown .dropbtn,
-  .dropdown2 .dropbtn {
+@media screen and (max-width: 970px) {
+  .wrapper .btn {
+    display: block;
+  }
+  .wrapper .nav-links {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    max-width: 350px;
+    top: 0;
+    left: -100%;
+    // background: #242526;
+    // background: #4054b2;
+    background: linear-gradient(85deg, #352361 1%, rgba(64, 84, 178, 1) 55%);
+
+    display: block;
+    padding: 50px 10px;
+    line-height: 50px;
+    overflow-y: auto;
+    box-shadow: 0px 15px 15px rgba(0, 0, 0, 0.18);
+    transition: all 0.3s ease;
+  }
+  /* custom scroll bar */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    // background: #242526;
+    background: #4054b2;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #3a3b3c;
+  }
+  #menu-btn:checked ~ .nav-links {
+    left: 0%;
+  }
+  #menu-btn:checked ~ .btn.menu-btn {
     display: none;
   }
+  #close-btn:checked ~ .btn.menu-btn {
+    display: block;
+  }
+  .nav-links li {
+    margin: 15px 10px;
+  }
+  .nav-links li a {
+    padding: 0 20px;
+    display: block;
+    font-size: 20px;
+  }
+  .nav-links .drop-menu {
+    position: static;
+    opacity: 1;
+    top: 65px;
+    visibility: visible;
+    padding-left: 20px;
+    width: 100%;
+    max-height: 0px;
+    overflow: hidden;
+    box-shadow: none;
+    transition: all 0.3s ease;
+  }
+  #showDrop:checked ~ .drop-menu,
+  #showMega:checked ~ .mega-box {
+    max-height: 100%;
+  }
+  .nav-links .desktop-item {
+    display: none;
+  }
+  .nav-links .mobile-item {
+    display: block;
+    color: #f2f2f2;
+    font-size: 20px;
+    font-weight: 500;
+    padding-left: 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+  }
+  .nav-links .mobile-item:hover {
+    background: #3a3b3c;
+  }
+  .drop-menu li {
+    margin: 0;
+  }
+  .drop-menu li a {
+    border-radius: 5px;
+    font-size: 18px;
+  }
+  .mega-box {
+    position: static;
+    top: 65px;
+    opacity: 1;
+    visibility: visible;
+    padding: 0 20px;
+    max-height: 0px;
+    overflow: hidden;
+    transition: all 0.3s ease;
+  }
+  .mega-box .content {
+    box-shadow: none;
+    flex-direction: column;
+    padding: 20px 20px 0 20px;
+  }
+  .mega-box .content .row {
+    width: 100%;
+    margin-bottom: 15px;
+    border-top: 1px solid rgba(255, 255, 255, 0.08);
+  }
+  .mega-box .content .row:nth-child(1),
+  .mega-box .content .row:nth-child(2) {
+    border-top: 0px;
+  }
+  .content .row .mega-links {
+    border-left: 0px;
+    padding-left: 15px;
+  }
+  .row .mega-links li {
+    margin: 0;
+  }
+  .content .row header {
+    font-size: 19px;
+  }
+}
+nav input {
+  display: none;
+}
+header {
+  grid-area: navbar;
+}
+main {
+  grid-area: main;
+  padding: 0px 5px;
+  //   height: 100vh;
+  // background-color: #131f53;
+  // display: grid;
+  // display: flex;
+  // // grid-template-columns: 2fr;
+  // flex-direction: column;
+  // justify-content: center;
+  row-gap: 20px;
 }
 
-// .topnav a:hover,
-.dropdown2:hover .dropbtn {
-  background-color: #555;
-  color: white;
+footer {
+  grid-area: footer;
+}
+
+body {
+  //config flex layout
+  // display: flex;
+  // flex-direction: column;
+
+  display: grid;
+  grid-template-areas:
+    " navbar "
+    "main "
+    "footer ";
+  // font-family: Arial, Verdana, sans-serif;
+  //   row-gap: 20px;
+  grid-template-rows: auto 1fr auto;
+  // grid-template-columns: auto;
+  height: 100vh;
+  // width: 100vw;
+  row-gap: 20px;
+  text-align: justify;
+  margin: 0;
+  padding: 0;
+
+  @include media(desktop) {
+    grid-template-areas:
+      " . navbar ."
+      "  . main .  "
+      ". footer . ";
+    grid-template-columns: auto 1240px auto;
+
+    padding: 0;
+  }
 }
 
 $n: 5; /* number of images*/
